@@ -8,4 +8,4 @@
 
 set -e # Exit on failure
 
-exec java -jar /tmp/codecrafters-build-grep-java/codecrafters-grep.jar "$@"
+exec java --enable-preview -jar /tmp/codecrafters-build-grep-java/codecrafters-grep.jar "$@"
